host decom
